brute force solution completed